@@ -23,26 +23,26 @@ import static com.ecommerce.itemsdata.model.SizeType.SHOES;
 public class ItemGenerator {
 
     private final List<Category> categories = Arrays.asList(
-            new Category(1L, "T_SHIRTS", "t_shirts.png", List.of()),
-            new Category(2L, "SHIRTS", "shirts.png", List.of()),
-            new Category(3L, "TROUSERS", "trousers.png", Arrays.asList(
+            new Category("t-shirts", "T-Shirts", "t_shirts.png", List.of()),
+            new Category("shirts", "Shirts", "shirts.png", List.of()),
+            new Category("trousers", "Trousers", "trousers.png", Arrays.asList(
                     new Subcategory(1L, "JEANS", null),
                     new Subcategory(2L, "JOGGERS", null),
                     new Subcategory(3L, "SPORT", null))
             ),
-            new Category(4L, "SHORTS", "shorts.png", List.of()),
-            new Category(5L, "HOODIES_AND_SWEATSHIRTS", "hoodies_and_sweatshirts.png", List.of()),
-            new Category(6L, "SWEATERS", "sweaters.png", List.of()),
-            new Category(7L, "COATS", "coats.png", List.of()),
-            new Category(8L, "JACKETS", "jackets.png", List.of()),
-            new Category(9L, "SHOES", "shoes.png", Arrays.asList(
+            new Category("shorts", "Shorts", "shorts.png", List.of()),
+            new Category("hoodies-and-sweatshirts", "Hoodies & Sweatshirts", "hoodies_and_sweatshirts.png", List.of()),
+            new Category("sweaters", "Sweaters", "sweaters.png", List.of()),
+            new Category("coats", "Coats", "coats.png", List.of()),
+            new Category("jackets", "Jackets", "jackets.png", List.of()),
+            new Category("shoes", "Shoes", "shoes.png", Arrays.asList(
                     new Subcategory(4L, "SANDALS",  null),
                     new Subcategory(5L, "SNEAKERS", null),
                     new Subcategory(6L, "BOOTS", null))
             ),
-            new Category(10L, "UNDERWEAR", "underwear.png", List.of()),
-            new Category(11L, "SOCKS", "socks.png", List.of()),
-            new Category(11L, "ACCESSORIES", "accessories.png", List.of())
+            new Category("underwear", "Underwear", "underwear.png", List.of()),
+            new Category("socks", "Socks", "socks.png", List.of()),
+            new Category("accessories", "Accessories", "accessories.png", List.of())
     );
     private final List<Size> allSizesClothes = Arrays.asList(
             new Size(1L, "XS", CLOTHES),
